@@ -8,8 +8,29 @@
 <body>	
 	<span class="headline">capability check</span>
 	<br/><br/>
-	<span class="text">You can have CPU tuner check your phone's capabilites in regard to tuning it's CPU.</span>
-	<span class="text">Therefore go to <span class="italic">Settings</span> -> <span class="italic">Check Cpabilities</span>
+	<span class="text">You can have CPU tuner check your device's capabilities in regard to tuning it's CPU.</span>
+	<span class="text">Please note that CPU tuner does not support phones, but it needs a kernel with 
+	support for the <a href="cpufreq/cpufreq.html">cpufreq</a> interface.
+	</span>
+	<span class="text">
+	CPU tuner produces good results if at least one of the following governors is working.
+		<ul>
+			<li><span class="bold">ondemand governor</span><br/>
+			That is a ondemand governor that allows reading and writing to the up threshold
+			</li>
+			<li><span class="bold">conservative governor</span><br/>
+			That is a conservative governor that allows reading and writing to the up and down threshold. 
+			</li>
+		</ul>
+	</span>
+	<span class="text">For more information you can go to the CPU tuner 
+	<a href="https://sourceforge.net/projects/cputuner/forums/forum/1718254">capability check forum</a>.
+	</span>
+	<span class="text">If you looking for more information on rooting or getting a new ROM or kernel checkout
+	the <a href="http://forum.xda-developers.com/">xda-developers forums</a>
+	or
+	<a href="http://www.cyanogenmod.com/">CyanogenMod</a>.
+	</span>
 </body>
 </html>
 <!-- created by Michael "unrest" Lenz, Dec 16th 2010 -->
