@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<menu
+  xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:id="@+id/menuItemSendMail" android:title="@string/email" android:icon="@android:drawable/ic_dialog_email"></item>
+</menu>
